--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
-    "node-sass": "^7.0.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -21,7 +20,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^4.9.2",
+    "sass": "^1.49.8",
     "sass-loader": "^7.0.3",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.14"
