--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "clipboard": "^2.0.10",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
