--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.49.8",
+    "sass": "~1.32.12",
     "sass-loader": "^7.0.3",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.14"
